--- a/MyCode/MyCode.csproj
+++ b/MyCode/MyCode.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DokusyuCSharp.cs" />
+    <Compile Include="LogicCircuit.cs" />
     <Compile Include="MyAlgorithms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
